--- a/servithenEN/htmlEN/MentionsLegalesEN.html
+++ b/servithenEN/htmlEN/MentionsLegalesEN.html
@@ -189,7 +189,7 @@
             <br>
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/linkedinW.png">
-                <a target="_blank" class="footerp" href="https://www.linkedin.com/company/servithen/">Société SERVITHEN</a>
+                <a target="_blank" class="footerp" href="https://www.linkedin.com/company/servithen/">SERVITHEN</a>
             </div>
             <br>
             <div class="foter">
