--- a/servithenFR/htmlFR/serviceFR/service1.html
+++ b/servithenFR/htmlFR/serviceFR/service1.html
@@ -208,7 +208,7 @@
             <br>
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/linkedinW.png" alt="logo linkedin ">
-                <a target="_blank"  class="footerp" href="https://www.linkedin.com/company/servithen/">Société SERVITHEN</a>
+                <a target="_blank"  class="footerp" href="https://www.linkedin.com/company/servithen/">SERVITHEN</a>
             </div>
             <br>
             <div class="foter">
