--- a/servithenFR/htmlFR/serviceFR/service1.html
+++ b/servithenFR/htmlFR/serviceFR/service1.html
@@ -103,12 +103,12 @@
 
     <div id="infoAccueil">
         <div id="txtAccueil">
-            <p class="pTitre">
+            <p id="txtTitre" class="pTitre">
                 Servithen, industrie française, <br> 30 ans de savoir faire. <br>
             </p>
         </div>
         <div id="soustxtAccueil">
-            <p class="pTitre">
+            <p id="stxtTitre" class="pTitre">
                 Audits et Expertises d’installations.
             </p>
         </div>
@@ -158,11 +158,7 @@
                 <div class="barre"></div>
                 <div class="sphère"></div>
             </div>
-            <section class="customer-logos2 slider2">
-                <div class="slide2"><img src="/img/partenaire/lechler_logo.png"></div>
-                <div class="slide2"><img src="/img/partenaire/logo-neu-process.png"></div>
-                <div class="slide2"><img src="/img/partenaire/logo-Siemens.png"></div>
-                <div class="slide2"><img src="/img/partenaire/someflu.png"></div>
+            <section id="Partenaire" class="customer-logos2 slider2">
             </section>
         </div>
 
@@ -170,18 +166,7 @@
 
         <div class="container">
             <h2 class="text-center font-weight-bold">nous font confiance :</h2>
-            <section class="customer-logos slider">
-                <div class="slide"><img src="/img/LogoConfiance/artelia.png"></div>
-                <div class="slide"><img src="/img/LogoConfiance/guerbet.png"></div>
-                <div class="slide"><img src="/img/LogoConfiance/logo-constellium.png"></div>
-                <div class="slide"><img src="/img/LogoConfiance/logo-orange.png"></div>
-                <div class="slide"><img src="/img/LogoConfiance/Logo-Veolia.png"></div>
-                <div class="slide"><img src="/img/LogoConfiance/ocp.png"></div>
-                <div class="slide"><img src="/img/LogoConfiance/orano-logo.png"></div>
-                <div class="slide"><img src="/img/LogoConfiance/sgd-pharma-logo.svg"></div>
-                <div class="slide"><img src="/img/LogoConfiance/siaap.png"></div>
-                <div class="slide"><img src="/img/LogoConfiance/suez.png"></div>
-                <div class="slide"><img src="/img/LogoConfiance/valorhin.png"></div>
+            <section id="Confiance" class="customer-logos slider">
             </section>
         </div>
 
@@ -195,24 +180,22 @@
 
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/logoTelW.png">
-                <a class="footerp" href="Tel:+33134897146"> +33 (0) 1 34 89 71 46</a>
+                <a id="Telephone" class="footerp" href=""></a>
             </div>
             <br>
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/logoMailW.png">
-                <a class="footerp" href="mailto:info@servithen.fr">info@servithen.fr</a>
+                <a id="Mail" class="footerp" href=""></a>
             </div>
             <br>
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/linkedinW.png">
-                <a target="_blank" class="footerp" href="https://www.linkedin.com/company/servithen/">Société SERVITHEN</a>
+                <a id="Linkedin" target="_blank" class="footerp"></a>
             </div>
             <br>
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/logoPosW.png">
-                <a target="_blank" class="footerp" href="https://www.google.fr/maps/place/SERVITHEN/@48.8155515,1.9083403,20z/data=!4m13!1m7!3m6!1s0x47e69b2e4c101591:0x3c4b6015d2f3a5ea!2s8+Rue+Guillaume+de+Bois+Nivard,+78640+Neauphle-le-Ch%C3%A2teau!3b1!8m2!3d48.8155576!4d1.9084528!3m4!1s0x47e69b2e4914fd6f:0xefa5b210e1554b90!8m2!3d48.8155084!4d1.9085263">
-                        8 Rue Guillaume de Bois Nivard,<br> 78640 Neauphle-le-Château</a>
-
+                <a id="Local" target="_blank" class="footerp">
             </div>
 
         </footer>
