modif page d'accueil

--- a/servithenFR/htmlFR/serviceFR/service5.html
+++ b/servithenFR/htmlFR/serviceFR/service5.html
@@ -110,7 +110,7 @@
         </div>
         <div id="soustxtAccueil">
             <p class="pTitre">
-                Audits et Expertises d’installations.
+                installation complète.
             </p>
         </div>
 
