--- a/servithenFR/htmlFR/accueilFR.html
+++ b/servithenFR/htmlFR/accueilFR.html
@@ -11,7 +11,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
     <script  src="/servithenFR/jsFR/confianceFR.js"></script>
-
+    
 </head>
 
 <body>
@@ -118,8 +118,8 @@
 
     <!-- section notre activité avec les image et les texte-->
 
-    <div class="page"></div>
-    <section class="nav">
+   
+    <section class="nav" >
         <h3>Notre activité</h3>
         <div class="fond">
             <div class="déco">
@@ -130,26 +130,81 @@
             </div>
             <p class="textphoto">Basée en Ile-de-France et au Maroc, SERVITHEN est une société qui propose des services dans le domaine de lavage des gaz en tant que Maître d’œuvre (MOE) et Maître d’ouvrage (MO) pour examiner vos équipements de près et prolonger leurs durées
                 de vie tout en s’adaptant à vos besoins.</p>
+                <h4>Nos services :</h4>
             <div class="flex">
-                <div class="hover">
-                    <div class="card2">
-                        <p class="description">Diagnostic d'installation</p><img src="/img/IMG_E7116.jpeg" class="left" alt="photo des services"> <img src="/img/IMG_7078.jpeg" class="right" alt="photo des services"> <img src="/img/IMG_7104bis.jpeg" class="middle" alt="photo des services"></div>
+                <div class="hover" id="carteSection1">
+                    <div class="card2"  >
+                       <p class="description">Diagnostic d'installation</p><img src="/img/IMG_E7116.jpeg" class="left" alt="photo des services"> <img src="/img/IMG_7078.jpeg" class="right" alt="photo des services"> <img src="/img/IMG_7104bis.jpeg" class="middle" alt="photo des services">
+                    </div>
                 </div>
-                <div class="hover">
+                <div class="hover" id="carteSection2">
                     <div class="card2">
                         <p class="description">Remise aux normes</p><img src="/img/20220310_152203741_iOS.jpeg" class="left" alt="photo des services"><img src="/img/20220310_152209869_iOS.jpeg" class="right" alt="photo des services"> <img src="/img/Norme.png" class="middle" alt="photo des services"></div>
                 </div>
+                <div class="hover" id="carteSection3">
+                    <div class="card2">
+                        <p class="description">Valorisation énergétique </p><img src="/img/20220310_152203741_iOS.jpeg" class="left" alt="photo des services"><img src="/img/20220310_152209869_iOS.jpeg" class="right" alt="photo des services"> <img src="/img/Norme.png" class="middle" alt="photo des services"></div>
+                </div>
             </div>
             <div class="flex">
-                <div class="hover">
+                <div class="hover" id="carteSection4">
                     <div class="card2">
                         <p class="description">Etude de projet</p><img src="/img/Gaine2701assemblage2.png" class="left" alt="photo des services"> <img src="/img/Capture2910-3.png" class="right" alt="photo des services"> <img src="/img/Capture2701-3d.png" class="middle" alt="photo des services"></div>
                 </div>
-                <div class="hover">
+                <div class="hover" id="carteSection5">
                     <div class="card2">
                         <p class="description">Installation complète</p><img src="/img//c0cc2127-d5d1-4551-a58b-f8810966ded9.jpeg" class="left" alt="photo des services"> <img src="/img/4173969b-65fc-4617-843d-711aa44b1d9e.jpeg" class="right" alt="photo des services"> <img src="/img/120e21a2-83cb-43ba-9fa4-f79532850dd7.jpeg"
                             class="middle" alt="photo des services"></div>
                 </div>
+            </div>
+            <h4>Nos produits :</h4>
+            <div class="flex">
+                <div class="hover" id="carteProduit1">
+                    <div class="card2"  >
+                       <p class="description">Tour de lavage</p><img src="/img/Capture2910-3.png" class="left" alt="photo des services"> <img src="/img/Plaquette_05.jpg" class="right" alt="photo des services"> <img src="/img/Plaquette_06.JPG" class="middle" alt="photo des services">
+                    </div>
+                </div>
+                <div class="hover" id="carteProduit2">
+                    <div class="card2">
+                        <p class="description">Venturi  </p><img src="/img/20220310_152203741_iOS.jpeg" class="left" alt="photo des services"><img src="/img/20220310_152209869_iOS.jpeg" class="right" alt="photo des services"> <img   src="/img/venturi.png" class="middle" alt="photo des services"></div>
+                </div>
+                <div class="hover" id="carteProduit3">
+                    <div class="card2">
+                        <p class="description">Electrofiltres humides et sec</p><img src="/img/20220310_152203741_iOS.jpeg" class="left" alt="photo des services"><img src="/img/20220310_152209869_iOS.jpeg" class="right" alt="photo des services"> <img src="/img/Norme.png" class="middle" alt="photo des services"></div>
+                </div>
+            </div>
+            <div class="flex">
+                <div class="hover" id="carteProduit4">
+                    <div class="card2"  >
+                       <p class="description">Filtres à manches</p><img src="/img/Capture2910-3.png" class="left" alt="photo des services"> <img src="/img/Plaquette_05.jpg" class="right" alt="photo des services"> <img src="/img/Plaquette_06.JPG" class="middle" alt="photo des services">
+                    </div>
+                </div>
+                <div class="hover" id="carteProduit5">
+                    <div class="card2">
+                        <p class="description">EDIP  </p><img src="/img/20220310_152203741_iOS.jpeg" class="left" alt="photo des services"><img src="/img/20220310_152209869_iOS.jpeg" class="right" alt="photo des services"> <img   src="/img/venturi.png" class="middle" alt="photo des services"></div>
+                </div>
+                <div class="hover" id="carteProduit6">
+                    <div class="card2">
+                        <p class="description">installation "clé en main"</p><img src="/img/20220310_152203741_iOS.jpeg" class="left" alt="photo des services"><img src="/img/20220310_152209869_iOS.jpeg" class="right" alt="photo des services"> <img src="/img/Norme.png" class="middle" alt="photo des services"></div>
+                </div>
+            </div>
+            <div class="flex">
+                <div class="hover" id="carteProduit7">
+                    <div class="card2">
+                        <p class="description">Récupération d'énergie</p><img src="/img/Gaine2701assemblage2.png" class="left" alt="photo des services"> <img src="/img/Capture2910-3.png" class="right" alt="photo des services"> <img src="/img/Capture2701-3d.png" class="middle" alt="photo des services"></div>
+                </div>
+                <div class="hover" id="carteProduit8">
+                    <div class="card2">
+                        <p class="description">Fourniture de pièce de rechange</p><img src="/img//c0cc2127-d5d1-4551-a58b-f8810966ded9.jpeg" class="left" alt="photo des services"> <img src="/img/4173969b-65fc-4617-843d-711aa44b1d9e.jpeg" class="right" alt="photo des services"> <img src="/img/120e21a2-83cb-43ba-9fa4-f79532850dd7.jpeg"
+                            class="middle" alt="photo des services"></div>
+                </div>
+            </div>
+
+            <h4>industrie 4.0 :</h4>
+            <div  class="flex">
+                    <video width="500" height="320" controls>
+                        <source src="/video/PrésentationMP.mp4" type="video/mp4">
+                    </video>
             </div>
         </div>
     </section>
@@ -226,5 +281,6 @@
 
         </footer>
 </body>
+<script src="/servithenFR/jsFR/scriptFR.js"></script>
 
 </html>
