--- a/servithenFR/htmlFR/serviceFR/service3.html
+++ b/servithenFR/htmlFR/serviceFR/service3.html
@@ -110,7 +110,7 @@
         </div>
         <div id="soustxtAccueil">
             <p class="pTitre">
-                Audits et Expertises d’installations.
+                Valorisation energetique.
             </p>
         </div>
 
