--- a/servithenFR/htmlFR/serviceFR/service4.html
+++ b/servithenFR/htmlFR/serviceFR/service4.html
@@ -110,7 +110,7 @@
         </div>
         <div id="soustxtAccueil">
             <p class="pTitre">
-                Audits et Expertises d’installations.
+                etude de projet.
             </p>
         </div>
 
