nous font confiance ligne animé

--- a/servithenFR/htmlFR/MentionsLegales.html
+++ b/servithenFR/htmlFR/MentionsLegales.html
@@ -27,9 +27,9 @@
 
                 <a href="/servithenFR/htmlFR/accueilFR.html"><img class="logo" src="/img/logoSite/logo.png " alt="logo servithen"></a>
 
-                <a href="/servithenFR/htmlFR/accueilFR.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr"/></a>
+                <a href="/servithenFR/htmlFR/accueilFR.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr" /></a>
 
-                <a href="/servithenEN/htmlEN/MentionsLegalesEN.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" alt="logo drapeau en"/></a>
+                <a href="/servithenEN/htmlEN/MentionsLegalesEN.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" alt="logo drapeau en" /></a>
 
 
 
@@ -157,6 +157,12 @@
 
         <div class="container">
             <h3 class="text-center font-weight-bold">nous font confiance :</h3>
+            <div class="déco">
+                <div class="sphère"></div>
+                <div class="transmission"></div>
+                <div class="barre"></div>
+                <div class="sphère"></div>
+            </div>
             <section class="customer-logos slider">
                 <div class="slide"><img src="/img/LogoConfiance/artelia.png" alt="logo artelia"></div>
                 <div class="slide"><img src="/img/LogoConfiance/guerbet.png" alt="logo guerbet"></div>
