--- a/servithenEN/htmlEN/ProduitEN.html/VenturiEN.html
+++ b/servithenEN/htmlEN/ProduitEN.html/VenturiEN.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/servithenEN/cssEN/accueilEN.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-    <script  src="/servithenEN/jsEN/confianceEN.js"></script>
+    <script src="/servithenEN/jsEN/confianceEN.js"></script>
 
 </head>
 
@@ -27,10 +27,10 @@
 
                 <a href="/servithenEN/htmlEN/accueilEN.html"><img class="logo" src="/img/logoSite/logo.png " alt="logo Servithen"></a>
 
-                <a href="/servithenFR/htmlFR/ProduitFR.html/VenturiFR.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr"/></a>
-    
-                <a href="/servithenEN/htmlEN/ProduitEN.html/VenturiEN.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" alt="logo drapeau en"/></a>
-    
+                <a href="/servithenFR/htmlFR/ProduitFR.html/VenturiFR.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr" /></a>
+
+                <a href="/servithenEN/htmlEN/ProduitEN.html/VenturiEN.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" alt="logo drapeau en" /></a>
+
 
                 <div class="dropdown">
 
@@ -163,6 +163,12 @@
 
         <div class="container">
             <h3 class="text-center font-weight-bold">nous font confiance :</h3>
+            <div class="déco">
+                <div class="sphère"></div>
+                <div class="transmission"></div>
+                <div class="barre"></div>
+                <div class="sphère"></div>
+            </div>
             <div class="customer-logos slider">
                 <div class="slide"><img src="/img/LogoConfiance/artelia.png" alt="logo confiance artelia"></div>
                 <div class="slide"><img src="/img/LogoConfiance/guerbet.png" alt="logo confiance guerbet"></div>
@@ -179,42 +185,42 @@
         </div>
 
     </div>
-        <!-- bas de la page avec les coordonnées -->
+    <!-- bas de la page avec les coordonnées -->
 
 
-        <footer class="coordonne">
+    <footer class="coordonne">
 
-            <div class="foters">
-                <h4>Coordinated :</h4>
-            </div>
+        <div class="foters">
+            <h4>Coordinated :</h4>
+        </div>
 
-            <div class="foter">
-                <img class="logoinfo" src="/img/LogoFooter/logoTelW.png" alt="logo telephone ">
-                <a  class="footerp" href="Tel:+33134897146"> +33 (0) 1 34 89 71 46</a>
-            </div>
-            <br>
-            <div class="foter">
-                <img class="logoinfo" src="/img/LogoFooter/logoMailW.png" alt="logo mail ">
-                <a class="footerp" href="mailto:info@servithen.fr">info@servithen.fr</a>
-            </div>
-            <br>
-            <div class="foter">
-                <img class="logoinfo" src="/img/LogoFooter/linkedinW.png" alt="logo linkedin ">
-                <a target="_blank"  class="footerp" href="https://www.linkedin.com/company/servithen/">SERVITHEN</a>
-            </div>
-            <br>
-            <div class="foter">
-                <img class="logoinfo" src="/img/LogoFooter/logoPosW.png" alt="logo position ">
-                <a  class="footerp" target="_blank" href="https://www.google.fr/maps/place/SERVITHEN/@48.8155515,1.9083403,20z/data=!4m13!1m7!3m6!1s0x47e69b2e4c101591:0x3c4b6015d2f3a5ea!2s8+Rue+Guillaume+de+Bois+Nivard,+78640+Neauphle-le-Ch%C3%A2teau!3b1!8m2!3d48.8155576!4d1.9084528!3m4!1s0x47e69b2e4914fd6f:0xefa5b210e1554b90!8m2!3d48.8155084!4d1.9085263">
+        <div class="foter">
+            <img class="logoinfo" src="/img/LogoFooter/logoTelW.png" alt="logo telephone ">
+            <a class="footerp" href="Tel:+33134897146"> +33 (0) 1 34 89 71 46</a>
+        </div>
+        <br>
+        <div class="foter">
+            <img class="logoinfo" src="/img/LogoFooter/logoMailW.png" alt="logo mail ">
+            <a class="footerp" href="mailto:info@servithen.fr">info@servithen.fr</a>
+        </div>
+        <br>
+        <div class="foter">
+            <img class="logoinfo" src="/img/LogoFooter/linkedinW.png" alt="logo linkedin ">
+            <a target="_blank" class="footerp" href="https://www.linkedin.com/company/servithen/">SERVITHEN</a>
+        </div>
+        <br>
+        <div class="foter">
+            <img class="logoinfo" src="/img/LogoFooter/logoPosW.png" alt="logo position ">
+            <a class="footerp" target="_blank" href="https://www.google.fr/maps/place/SERVITHEN/@48.8155515,1.9083403,20z/data=!4m13!1m7!3m6!1s0x47e69b2e4c101591:0x3c4b6015d2f3a5ea!2s8+Rue+Guillaume+de+Bois+Nivard,+78640+Neauphle-le-Ch%C3%A2teau!3b1!8m2!3d48.8155576!4d1.9084528!3m4!1s0x47e69b2e4914fd6f:0xefa5b210e1554b90!8m2!3d48.8155084!4d1.9085263">
                         8 Rue Guillaume de Bois Nivard,<br> 78640 Neauphle-le-Château</a>
 
-            </div>
+        </div>
 
 
-            <p class="Copyright">&copy; Copyright 1986 - 2022 | SERVITHEN | All rights reserved | <a class="Copyright" href="/servithenEN/htmlEN/MentionsLegalesEN.html">Legal Notice</a> </p>
+        <p class="Copyright">&copy; Copyright 1986 - 2022 | SERVITHEN | All rights reserved | <a class="Copyright" href="/servithenEN/htmlEN/MentionsLegalesEN.html">Legal Notice</a> </p>
 
 
-        </footer>
+    </footer>
 </body>
 
 </html>
