redirection image EN

--- a/servithenEN/htmlEN/accueilEN.html
+++ b/servithenEN/htmlEN/accueilEN.html
@@ -112,8 +112,8 @@
 
     <div class="page"></div>
     <section class="nav">
+        <h3>Our activity</h3>
         <div class="fond">
-            <h3>Our activity</h3>
             <div class="déco">
                 <div class="sphère"></div>
                 <div class="transmission"></div>
@@ -122,29 +122,87 @@
             </div>
             <p class="textphoto">Based in Ile-de-France and Morocco, SERVITHEN is a company that offers services in the field of gas cleaning as Project Manager (MOE) and Project Owner (MO) to closely examine your equipment and extend their duration lifestyle while adapting
                 to your needs.</p>
+            <h4>Nos services :</h4>
             <div class="flex">
-                <div class="hover">
+                <div class="hover" id="carteSection1">
                     <div class="card2">
-                        <p class="description">Installation diagnosis</p><img src="/img/IMG_E7116.jpeg" class="left" alt="photo des services"> <img src="/img/IMG_7078.jpeg" class="right" alt="photo des services"> <img src="/img/IMG_7104bis.jpeg" class="middle" alt="photo des services"></div>
+                        <p class="description">Installation diagnosis</p><img src="/img/IMG_E7116.jpeg" class="left" alt="photo des services"> <img src="/img/IMG_7078.jpeg" class="right" alt="photo des services"> <img src="/img/IMG_7104bis.jpeg" class="middle" alt="photo des services">
+                    </div>
                 </div>
-                <div class="hover">
+                <div class="hover" id="carteSection2">
                     <div class="card2">
                         <p class="description">Upgrading</p><img src="/img/20220310_152203741_iOS.jpeg" class="left" alt="photo des services"><img src="/img/20220310_152209869_iOS.jpeg" class="right" alt="photo des services"> <img src="/img/Norme.png" class="middle" alt="photo des services"></div>
                 </div>
+                <div class="hover" id="carteSection3">
+                    <div class="card2">
+                        <p class="description">Energy recovery</p><img src="/img/20220310_152203741_iOS.jpeg" class="left" alt="photo des services"><img src="/img/20220310_152209869_iOS.jpeg" class="right" alt="photo des services"> <img src="/img/Norme.png" class="middle" alt="photo des services"></div>
+                </div>
             </div>
             <div class="flex">
-                <div class="hover">
+                <div class="hover" id="carteSection4">
                     <div class="card2">
                         <p class="description">Project study</p><img src="/img/Gaine2701assemblage2.png" class="left" alt="photo des services"> <img src="/img/Capture2910-3.png" class="right" alt="photo des services"> <img src="/img/Capture2701-3d.png" class="middle" alt="photo des services"></div>
                 </div>
-                <div class="hover">
+                <div class="hover" id="carteSection5">
                     <div class="card2">
                         <p class="description">Complete installation</p><img src="/img//c0cc2127-d5d1-4551-a58b-f8810966ded9.jpeg" class="left" alt="photo des services"> <img src="/img/4173969b-65fc-4617-843d-711aa44b1d9e.jpeg" class="right" alt="photo des services"> <img src="/img/120e21a2-83cb-43ba-9fa4-f79532850dd7.jpeg"
                             class="middle" alt="photo des services"></div>
                 </div>
             </div>
+            <h4>Our products :</h4>
+            <div class="flex">
+                <div class="hover" id="carteProduit1">
+                    <div class="card2">
+                        <p class="description">washing tower</p><img src="/img/Capture2910-3.png" class="left" alt="photo des services"> <img src="/img/Plaquette_05.jpg" class="right" alt="photo des services"> <img src="/img/Plaquette_06.JPG" class="middle" alt="photo des services">
+                    </div>
+                </div>
+                <div class="hover" id="carteProduit2">
+                    <div class="card2">
+                        <p class="description">Venturi</p><img src="/img/20220310_152203741_iOS.jpeg" class="left" alt="photo des services"><img src="/img/20220310_152209869_iOS.jpeg" class="right" alt="photo des services"> <img src="/img/venturi.png" class="middle" alt="photo des services"></div>
+                </div>
+                <div class="hover" id="carteProduit3">
+                    <div class="card2">
+                        <p class="description">Wet and dry electrofilters</p><img src="/img/20220310_152203741_iOS.jpeg" class="left" alt="photo des services"><img src="/img/20220310_152209869_iOS.jpeg" class="right" alt="photo des services"> <img src="/img/Norme.png" class="middle"
+                            alt="photo des services"></div>
+                </div>
+            </div>
+            <div class="flex">
+                <div class="hover" id="carteProduit4">
+                    <div class="card2">
+                        <p class="description">Bag filters</p><img src="/img/Capture2910-3.png" class="left" alt="photo des services"> <img src="/img/Plaquette_05.jpg" class="right" alt="photo des services"> <img src="/img/Plaquette_06.JPG" class="middle" alt="photo des services">
+                    </div>
+                </div>
+                <div class="hover" id="carteProduit5">
+                    <div class="card2">
+                        <p class="description">EDIP</p><img src="/img/20220310_152203741_iOS.jpeg" class="left" alt="photo des services"><img src="/img/20220310_152209869_iOS.jpeg" class="right" alt="photo des services"> <img src="/img/venturi.png" class="middle" alt="photo des services"></div>
+                </div>
+                <div class="hover" id="carteProduit6">
+                    <div class="card2">
+                        <p class="description">" turnkey " facility</p><img src="/img/20220310_152203741_iOS.jpeg" class="left" alt="photo des services"><img src="/img/20220310_152209869_iOS.jpeg" class="right" alt="photo des services"> <img src="/img/Norme.png" class="middle"
+                            alt="photo des services"></div>
+                </div>
+            </div>
+            <div class="flex">
+                <div class="hover" id="carteProduit7">
+                    <div class="card2">
+                        <p class="description">Energy recovery</p><img src="/img/Gaine2701assemblage2.png" class="left" alt="photo des services"> <img src="/img/Capture2910-3.png" class="right" alt="photo des services"> <img src="/img/Capture2701-3d.png" class="middle" alt="photo des services"></div>
+                </div>
+                <div class="hover" id="carteProduit8">
+                    <div class="card2">
+                        <p class="description">Spare part supply</p><img src="/img//c0cc2127-d5d1-4551-a58b-f8810966ded9.jpeg" class="left" alt="photo des services"> <img src="/img/4173969b-65fc-4617-843d-711aa44b1d9e.jpeg" class="right" alt="photo des services"> <img src="/img/120e21a2-83cb-43ba-9fa4-f79532850dd7.jpeg"
+                            class="middle" alt="photo des services"></div>
+                </div>
+            </div>
+
+            <h4>industry 4.0 :</h4>
+            <div class="flex">
+                <video width="500" height="320" controls>
+                        <source src="/video/PrésentationMP.mp4" type="video/mp4">
+                    </video>
+            </div>
         </div>
     </section>
+
 
 
     <!-- Les partenaires et nous font confiance -->
@@ -230,5 +288,6 @@
 
     </footer>
 </body>
+<script src="/servithenEN/jsEN/scriptEN.js"></script>
 
 </html>
