--- a/servithenFR/htmlFR/accueilFR.html
+++ b/servithenFR/htmlFR/accueilFR.html
@@ -117,7 +117,7 @@
     </div>
 
     <!-- section notre activité avec les image et les texte-->
-
+    <div class="page"></div>
 
     <section class="nav">
         <h3>Notre activité</h3>
